@@ -6,6 +6,9 @@ module MetadataTest
     sequence<Object> ObjectSeq;
     ["java:type:java.util.LinkedList"] sequence<Object> ObjectList;
 
+    dictionary<string, string> StringDict;
+    ["java:type:java.util.HashMap"] dictionary<string, string> StringMap;
+
     class C
     {
         IntSeq intSeqMember;
@@ -18,11 +21,17 @@ module MetadataTest
         ["java:type:java.util.ArrayList"] ObjectSeq modifiedObjectSeqMember;
         ["java:type:Test.CustomList"] ObjectList modifiedObjectListMember;
 
+	StringDict stringDictMember;
+	StringMap stringMapMember;
+
         IntSeq opIntSeq(IntSeq inArg, out IntSeq outArg);
         IntList opIntList(IntList inArg, out IntList outArg);
 
         ObjectSeq opObjectSeq(ObjectSeq inArg, out ObjectSeq outArg);
         ObjectList opObjectList(ObjectList inArg, out ObjectList outArg);
+
+        StringDict opStringDict(StringDict inArg, out StringDict outArg);
+        StringMap opStringMap(StringMap inArg, out StringMap outArg);
 
         ["ami"] IntSeq opIntSeqAMI(IntSeq inArg, out IntSeq outArg);
         ["ami"] IntList opIntListAMI(IntList inArg, out IntList outArg);
@@ -30,11 +39,17 @@ module MetadataTest
         ["ami"] ObjectSeq opObjectSeqAMI(ObjectSeq inArg, out ObjectSeq outArg);
         ["ami"] ObjectList opObjectListAMI(ObjectList inArg, out ObjectList outArg);
 
+        ["ami"] StringDict opStringDictAMI(StringDict inArg, out StringDict outArg);
+        ["ami"] StringMap opStringMapAMI(StringMap inArg, out StringMap outArg);
+
         ["amd"] IntSeq opIntSeqAMD(IntSeq inArg, out IntSeq outArg);
         ["amd"] IntList opIntListAMD(IntList inArg, out IntList outArg);
 
         ["amd"] ObjectSeq opObjectSeqAMD(ObjectSeq inArg, out ObjectSeq outArg);
         ["amd"] ObjectList opObjectListAMD(ObjectList inArg, out ObjectList outArg);
+
+        ["amd"] StringDict opStringDictAMD(StringDict inArg, out StringDict outArg);
+        ["amd"] StringMap opStringMapAMD(StringMap inArg, out StringMap outArg);
 
         ["java:type:java.util.LinkedList"] IntSeq
         opIntSeq2(["java:type:java.util.ArrayList"] IntSeq inArg,
